{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "gameplay",
            "id": "858d311d-e3ab-4765-bfc3-4d92e901f7e8",
            "actions": [
                {
                    "name": "Middle-Left",
                    "type": "Button",
                    "id": "16a33688-f841-4761-bc76-0c7144e40ef6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Middle-Right",
                    "type": "Button",
                    "id": "a807f6e1-0961-4302-bffa-fc7ca04bfd71",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Side-Left",
                    "type": "Button",
                    "id": "b486588c-6250-4cf5-9e5b-8f06d8f12d86",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Side-Right",
                    "type": "Button",
                    "id": "480229c9-6eca-4d85-a841-99f885a3872f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6f10c699-c6ca-4d41-bf87-8ff303bbade9",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Middle-Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "98cff46c-91b4-4263-8ba5-30d60b76f2df",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Middle-Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f664cbbd-bbbd-48cf-a170-dcdba3a532de",
                    "path": "<Gamepad>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Middle-Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "df7e06c8-9938-47dc-b501-d8ae96c0e7e4",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Middle-Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dd157bb8-e73d-4316-b31d-42c764201100",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Side-Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b49f7fd8-90c1-4bbb-9b7c-218f6cda430b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Side-Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f64a30c8-dd5e-4965-b51d-8c8e12d187b0",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Side-Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2fb81663-85e5-4b80-be81-bd613ac13144",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Side-Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}